--- a/mymusic.Rmd
+++ b/mymusic.Rmd
@@ -177,7 +177,7 @@ ohh.. on those nights
 <span style="color:#C12283"
 >apart, apart
 
-<span style="color:C12283"
+<span style="color:#C12283"
 >and once that they’re gone, I’m never me again
 
 they really just don’t see how bad I’m suffering
@@ -774,7 +774,6 @@ Now he’s missing her
 
 <span style="color:#C12283"
 >(chorus)
-
 
 
 
