--- a/mymusic.Rmd
+++ b/mymusic.Rmd
@@ -776,10 +776,59 @@ Now he’s missing her
 >(chorus)
 
 
+## Free
 
+This is a song a wrote about the day that I was told that I was cancer free.
 
+<img src="eli2003.jpg" style="width:40%; margin-center: 20px" align="center">
 
+It was the year 2004 on April 23
 
+The day that ended all the suffering
+
+No more waiting around
+
+Goodbye hospital gowns
+
+Say hello to playgrounds
+
+I'm free to be a child
+
+<span style="color:#C12283"
+> I'm free, cancer free
+
+<span style="color:#C12283"
+> I'm free, finally
+
+<span style="color:#C12283"
+> I'm free, cancer free
+
+<span style="color:#C12283"
+> I'm free, finally
+
+I'll no longer deal with bullies
+
+I won't have to hide in hoodies
+
+My hair will grow back
+
+I'll no longer be sad
+
+I'm a brand new girl
+
+Ready for the world
+
+<span style="color:#C12283"
+> (chorus)
+
+Even on my darkest days I chose to find the light
+
+I knew I couldn't give, had to put up a fight
+
+I'm more than ready to live an amazingly free life
+
+<span style="color:#C12283"
+>(chorus)
 
 
 
