--- a/mymusic.Rmd
+++ b/mymusic.Rmd
@@ -689,8 +689,95 @@ In knowing that you’ll forever be mine
 <span style="color:#C12283"
 >(chorus)
 
+## 10. Don't Rush
 
-## 10. When She Learned to Let Go
+Here we are, I'm crying
+
+and you're yelling
+
+Once again arguing
+
+over something so petty
+
+You want to control
+
+everything that I do
+
+You think you have a say
+
+in the choices I make
+
+But darling, darling, darling
+
+I think I'm running away
+
+<span style="color:#C12283"
+> Chorus
+
+<span style="color:#C12283"
+> These things happen
+
+<span style="color:#C12283"
+> when you rush into something
+
+<span style="color:#C12283"
+> for not wanting to be alone
+
+<span style="color:#C12283"
+> and this no longer feels like home
+
+<span style="color:#C12283"
+> Now I know it's time to go
+
+<span style="color:#C12283"
+> This love is everything I feared
+
+<span style="color:#C12283"
+>  Not even love, nowhere near
+
+<span style="color:#C12283"
+> It'll hurt, but I can't stick around
+
+<span style="color:#C12283"
+> Not when you keep me this stressed out
+
+Here we are, I'm upset
+
+you're giving me that guilt trip
+
+You say that I'm (the)
+
+love of your life
+
+but that's not what I
+
+felt last night
+
+Everyday this just gets worse
+
+It all just feels like some kind of curse
+
+and darling, darling, darling
+
+I think I'm running away
+
+<span style="color:#C12283"
+> (chorus)
+
+Bridge:
+
+My apologies, but I must leave
+
+This has sucked, all the life in me
+
+I really hoped for the best
+
+But now it's time to give it a rest
+
+<span style="color:#C12283"
+> (chorus)
+
+## 11. When She Learned to Let Go
 
 Young girl raised so beautifully sweet
 
@@ -831,6 +918,85 @@ I'm more than ready to live an amazingly free life
 >(chorus)
 
 
+## What Am I Doing?
+
+I know this isn't right, I know this won't work
+
+Can see straight through your lies, see it in your smirk
+
+I just can't keep putting up with all this hurt
+
+done nothing but fill my eyes with dirt
+
+<span style="color:red"
+> Pre Chorus:
+
+<span style="color:red"
+> All I ask myself
+
+<span style="color:red"
+> All I ask myself
+
+<span style="color:red"
+> All I ask myself
+
+<span style="color:#C12283"
+> Chorus:
+
+<span style="color:#C12283"
+> W-w-what am I doing anyway
+
+<span style="color:#C12283"
+>I know it's time, time to walk away
+
+<span style="color:#C12283"
+>A And you keep begging, begging me to stay
+
+<span style="color:#C12283"
+> W-w-what am I doing anyway
+
+<span style="color:#C12283"
+>Don't want to hear it, what you say
+
+<span style="color:#C12283"
+>Just stop begging, begging me to stay
+
+<span style="color:#C12283"
+>W-w-what am I doing anyway
+
+Everyday is a hassle, all we do is argue
+
+You say you love me, but I doubt that's true
+
+And I can't feel it, what I once felt for you
+
+Now we're spinning, you're the sun I'm the moon
+
+<span style="color:red"
+>(pre-chorus)
+
+<span style="color:#C12283"
+>(chorus)
+
+Bridge:
+
+Hurts to leave the one I thought would be mine forever
+
+Kept trying to make it work, tried to make it better
+
+But now nothing can save us, this day's too bitter
+
+No matter how hard you try, just can't change someone
+
+This goes for you, goes for me
+
+We'll learn from this, learn our lesson finally
+
+<span style="color:red"
+>(pre-chorus)
+
+<span style="color:#C12283"
+>(chorus)
 
 
 
