--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="styles.css" type="text/css">
 
 <img src="eliana_pic.jpg" style="width:35%; margin-right: 20px" align="left">
+<img src="eliana_pic.jpg" style="width:35%; margin-right: 20px" align="left">
 
 
 
@@ -15,7 +16,7 @@ My name is Eliana Espinosa, I am currently a student at [St. Thomas University](
 
 Below is playlist with some of my musical inspirations like Taylor Swift, Alicia Keys, Halsey, Elvis, etc. I really enjoy listening to this playlist when I go for a jog or walk around the lake near my new home. My favorite artist is Taylor Swift because she is also a songwriter and I have loved her music since I was 10 years old and first heard her song Teardrops On My Guitar. I will finally be attending her concert for the first time in my life. I will be Going to the Tampa show on August 14 and the Miami show on August 18.
 
-<img src="eliana_logo.jpg" style="width:35%; margin-right: 20px" align="left">
+
 
 
 <iframe src="https://open.spotify.com/embed/user/224ou2jzwdbezmgjgqhi5443a/playlist/0RqgkR9Yc9sVuVm9mjTzJN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
