--- a/mymusic.Rmd
+++ b/mymusic.Rmd
@@ -160,7 +160,71 @@ ohh.. on those nights
 <span style="color:#C12283"
 > (chorus)
 
-## 3. Mess With My Heart
+## 3. Beatiful Man
+
+Beautiful man, I'm your number 1 fan
+
+If only you knew how you make this girl dance
+
+From your dark brown hair, to that mysterious stare
+
+From the beat of your heart, to the love that you share
+
+That everlasting smile could never go out of style
+
+Beautiful man, loved you for quite a while
+
+<span style="color:#C12283"
+> Chrous:
+
+<span style="color:#C12283"
+> You're way too mesmerizing
+
+<span style="color:#C12283"
+>This may be a bit surprising
+
+<span style="color:#C12283"
+> But you've been my creative inspiration
+
+<span style="color:#C12283"
+>Beauiful man, beautiful man
+
+<span style="color:#C12283"
+>A truly amzing, beautiful man
+
+Beautiful man, I'm your number 1 fan
+
+If only you knew how you help me understand
+
+All the meaning and the beauty of life
+
+The difference between wrong and right
+
+Your willingness to help and strong sense of self
+
+A true inspiration, a wonderful creation
+
+Beautiful man, loved you for quite a while
+
+<span style="color:#C12283"
+>(chorus)
+
+Bridge:
+
+You're everything I've wanted and more
+
+A man I truly adore
+
+And any girl in the world
+
+would be lucky to be.. yours
+
+beautiful man
+
+<span style="color:#C12283"
+>(chorus)
+
+## 4. Mess With My Heart
 
 <span style="color:#C12283"
 >Chorus:
@@ -229,7 +293,7 @@ now the love left to share decreases
 <p style="color:#C12283"> (chorus) </p>
 
 
-## 4. Selfish
+## 5. Selfish
 
 many people tend to let go of the ones they love
 
@@ -319,7 +383,7 @@ Call me... selfish
 >(chorus)
 
 
-## 5. Misunderstood
+## 6. Misunderstood
 
 Misunderstood are these thoughts I have
 
@@ -379,7 +443,7 @@ For the love she has for him is forbidden
 >(chorus)
 
 
-## 6. If This Was Love
+## 7. If This Was Love
 
 no disrespect but I must admit
 
@@ -459,7 +523,7 @@ but darlin I can tell you why I don’t think that’s true
 >(chorus)
 
 
-## 7. Empty Space
+## 8. Empty Space
 
 Dating back and forth to fill that empty space
 
@@ -547,7 +611,7 @@ x 2
 
 
 
-## 8. It Could've Been You
+## 9. It Could've Been You
 
 you call me to tell me how much you miss me
 
@@ -623,7 +687,7 @@ just know that
 >(chorus)
 
 
-## 9. Butterflies
+## 10. Butterflies
 
 My oh my, I guess I should thank you
 
@@ -689,7 +753,7 @@ In knowing that you’ll forever be mine
 <span style="color:#C12283"
 >(chorus)
 
-## 10. Don't Rush
+## 11. Don't Rush
 
 Here we are, I'm crying
 
@@ -777,7 +841,7 @@ But now it's time to give it a rest
 <span style="color:#C12283"
 > (chorus)
 
-## 11. When She Learned to Let Go
+## 12. When She Learned to Let Go
 
 Young girl raised so beautifully sweet
 
