--- a/mymusic.Rmd
+++ b/mymusic.Rmd
@@ -1063,5 +1063,70 @@ We'll learn from this, learn our lesson finally
 >(chorus)
 
 
+The song below is something that I wrote for my boyfriend.It's called Pi Day because it is the day of our anniversary. 
+
+
+## Pi Day
+
+
+<span style="color:#C12283"
+>Chorus:
+
+<span style="color:#C12283"
+>From lighitng my kicthen up on fire
+
+<span style="color:#C12283"
+>To watching the sunrise in my car
+
+<span style="color:#C12283"
+>You've made your way into my heart 
+
+<span style="color:#C12283"
+>You've made your way into my heart
+
+<span style="color:#C12283"
+> X 2
+
+Knew you'd be the one I'd marry, marry
+
+From the moment we met in February
+
+Every moment with you is extraordinary
+
+On our first date dinner I dropped a knife
+
+We'll laugh at that for the rest of my life
+
+It's the little things that make us who we are
+
+You're a wish come true off a shooting star
+
+You're a wish come true off a shooting star
+
+<span style="color:#C12283"
+> (chorus) X2
+
+I love you with all that's in my heart
+
+I love you, always have, right from the start
+
+Never thought I'd find someoneso soon
+
+Now my 2ams are better than my noons
+
+There's no better feeling than waking up to you
+
+Babe I've never had a love, a love so good
+
+<span style="color:#C12283"
+>(chorus) X2
+
+
+
+
+
+
+
+
 
 
