--- a/index.Rmd
+++ b/index.Rmd
@@ -10,14 +10,12 @@
 
 ## About Me
 
-My name is Eliana Espinosa, I am currently a student at [St. Thomas University](https://www.stu.edu), majoring in *Mathematics*.I am 21 years old, I'm a cancer survivor (so is my mom and her mom), and I was born in Brooklyn, NY but was raised in Miami, FL. As a Math major, i have worked on several projects with R programming language and you can see them by clicking on the Projects tab. When I am not working or studying I like to write lyrics about different experiences in life. I have been writing for about 3 years  and my best song ideas tend to come to me late at night when I am trying to fall asleep. 
+My name is Eliana Espinosa.I am 21 years old, I'm a cancer survivor (so is my mom and her mom), and I was born in Brooklyn, NY but was raised in Miami, FL. As a Math major, i have worked on several projects with R programming language and you can see them by clicking on the Projects tab. When I am not working or studying I like to write lyrics about different experiences in life. I have been writing for about 3 years  and my best song ideas tend to come to me late at night when I am trying to fall asleep. 
 
 
 ## Musical Inspirations
 
-Below is playlist with some of my musical inspirations like Taylor Swift, Alicia Keys, Halsey, Elvis, etc. I really enjoy listening to this playlist when I go for a jog or walk around the lake near my new home. My favorite artist is Taylor Swift because she is also a songwriter and I have loved her music since I was 10 years old and first heard her song Teardrops On My Guitar. I will finally be attending her concert for the first time in my life. I will be Going to the Tampa show on August 14 and the Miami show on August 18.
-
-
+Below is playlist with some of my musical inspirations like Taylor Swift, Alicia Keys, Halsey, Elvis, etc. I really enjoy listening to this playlist when I go for a jog or walk around the lake near my new home. My favorite artist is Taylor Swift because she is also a songwriter and I have loved her music since I was 10 years old and first heard her song Teardrops On My Guitar.After being a Taylor Swift fan for 11 years, I was finally able to see her perform twice in August 14 (Tampa, FL) and August 18, 2018. IT was an amazing experience and if I could keep attending more of her concerts I definitely would! I highly suggest to anyone that they should attend the Reputation Stadium Tour. 
 
 <div style="width:35%; margin-right:20px; font-size:80%; text-align:center;"><img src="eliana_logo.jpg" alt="alternate text" width="width" height="height" style="padding-bottom:0.5em;" />Zvonilogos</div>
 
