--- a/mymusic.Rmd
+++ b/mymusic.Rmd
@@ -841,7 +841,80 @@ But now it's time to give it a rest
 <span style="color:#C12283"
 > (chorus)
 
-## 12. When She Learned to Let Go
+## 12. Over It
+
+No more sleepless nights
+
+No more twists and turning
+
+Let go of toxicity, free'd my mind
+
+I no longer cry to songs
+
+That remind me of you
+
+I no longer search for your smile
+
+When i look at the moon
+
+Won't disrespect myself 
+
+by thinking of you
+
+<span style="color:#C12283"
+>Chorus:
+
+<span style="color:#C12283"
+>Over it, over it, over you
+
+<span style="color:#C12283"
+>Dont with it, done with it, done with you
+
+<span style="color:#C12283"
+>I'm no longer thinking of you
+
+<span style="color:#C12283"
+>I've got better things to do
+
+<span style="color:#C12283"
+>Than to let you mess with my head, heart & mood
+
+You used to affect all my decisions
+
+Now I take deep breaths before every move
+
+My life, no longer affected by your intuitions
+
+I no longer seek approval from you
+
+I'm happier, free, and satisfied with me
+
+I'm growing, glowing, and raising myself
+
+You're not even a 3rd of who I aspire to be
+
+<span style="color:#C12283"
+>(chorus)
+
+Bridge:
+
+Free yourself from toxicity
+
+Let yourself be free
+
+Don't let them take away your ease
+
+Free yourself from toxicity
+
+Let yourself be free
+
+Don't let them take away your ease
+
+<span style="color:#C12283"
+>(chorus)
+
+
+## 13. When She Learned to Let Go
 
 Young girl raised so beautifully sweet
 
@@ -1120,6 +1193,116 @@ Babe I've never had a love, a love so good
 
 <span style="color:#C12283"
 >(chorus) X2
+
+
+## Forgetting
+
+Running on 3 hours of sleep
+
+YOu're gone, I'm here and can't breathe
+
+I love you more than I love me
+
+But I had to sit back and watch you leave
+
+There's nothing left for me to do
+
+Except hope that fate will lead me to you
+
+<span style="color:#C12283"
+>Chorus:
+
+<span style="color:#C12283"
+>Forgetting's not so easy to do
+
+<span style="color:#C12283"
+>Not when they meant that much to you
+
+<span style="color:#C12283"
+>Not when you saw their face everyday
+
+<span style="color:#C12283"
+>Not when they took your breath away
+
+<span style="color:#C12283"
+>You can't just go and leave me here
+
+<span style="color:#C12283"
+>When I made your troubles all disappear
+
+<span style="color:#C12283"
+>When I stood firm by your side all the time
+
+<span style="color:#C12283"
+>When I could have been the love of your life
+
+So you heard I found somebody new
+
+To escape every single thought of you
+
+But your name still haunts me in my dreams
+
+And I just could never ever fall for him
+
+Because he just isnt you
+
+<span style="color:#C12283"
+>(chorus)
+
+Bridge:
+
+I don't wanna let go... no no  no
+
+I don't wanna move on... no no no
+
+I only wish you'd be here
+
+Cause I feel so lost, so lost, lost without you
+
+<span style="color:#C12283"
+>(chorus)
+
+
+### Below is a song that I am currently writing but haven't finished yet
+
+## Gravitational Pull
+
+Pre-Chorus:
+
+You know that no one can love me like you
+
+We might be from earth but our love's like the moon
+
+<span style="color:#C12283"
+>Chorus:
+
+<span style="color:#C12283"
+>Gravitational Pull, Gravitational Pull
+
+<span style="color:#C12283"
+>Nobody,nobody loves me like you
+
+<span style="color:#C12283"
+>Top of the stratosphere such a great view
+
+<span style="color:#C12283"
+>When you're not here I feel like I can't breathe
+
+<span style="color:#C12283"
+>The force of your love's got me down on my knees
+
+<span style="color:#C12283"
+>Gravitational Pull, Gravitational Pull
+
+
+
+
+
+
+
+
+
+
 
 
 
