--- a/mymusic.Rmd
+++ b/mymusic.Rmd
@@ -18,6 +18,8 @@
 <center> 
 ## 1. Please Fall in Love With Me 
 
+#### This is a song that I wrote about someone who I admired a lot and had a huge crush on. This is probably the longest crush I have ever had on anybody. I think sometimes we meet people who just seem to be so perfetly flawless to us. They become really important to us and even though maybe you were not necessarily meant to end up togeher, you were definitely meant to at least meet and be an important part of each other's lives for a while. This person helped me become a better version of myself, and to tis day I will always be grateful to have crossed paths with that person even if it was only for a limited time.. 
+
 It's been a long time since I've had someone
 
 to hold me, comfort me, go out, and have some fun
@@ -83,6 +85,9 @@ but what can i say
 <center>
 
 ## 2. Those Nights
+
+#### This is a song I wrote about 3 years ago when I went through a break up with someone I was with for about 2 years. When I met him it was in Colombia and he was someone I fell really hard for and was my first love. It was always really hard for me when I had to come back to Miami and not be able to see him for months. When we broke up it was really hard for me because I ended up finding out that he moved in with one of his exes while he was still with me. I too me along time to gwt over him and once I was finally starting to get over him, he tried to come back into my life. Thankfully I saw past his lies that time and eventually got over him.
+
 
 Tell me how to feel when I'm alone
 
@@ -161,6 +166,8 @@ ohh.. on those nights
 > (chorus)
 
 ## 3. Beatiful Man
+
+#### Sometimes in life we have people who become a huge creative inspiration for us. With this person, song ideas just flew left and right. I was always able to imagine a scenario for me and that person and be able to write according to this scenario. Though my feelings for this person remain unclear, I always felt that the person I wrote this song about is just a beautiful person inside and out. That is why I felt that writing this song about them was necessary. 
 
 Beautiful man, I'm your number 1 fan
 
